Project

General

Profile

Actions

Bug #43795

closed

Ceph tools utilizing "global_[pre_]init" no longer process "early" environment options

Added by Jason Dillaman over 4 years ago. Updated over 3 years ago.

Status:
Resolved
Priority:
High
Assignee:
Jason Dillaman
Category:
-
Target version:
-
% Done:

0%

Source:
Community (user)
Tags:
Backport:
nautilus,mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Commit 7f23142f5ccc5ac8153d32b2c9a8353593831967 in PR 20172 [1] dropped the "env_to_vec" calls issued prior to invoking "global_[pre_]init", which means that CEPH_ARGS overrides are no longer being processed by "ceph_argparse_early_args". The remaining environment options (for config option overrides) are properly handled, so this only affects the early arguments like "id", "name", "cluster", "conf", etc.

[1] https://github.com/ceph/ceph/pull/20172


Related issues 2 (0 open2 closed)

Copied to RADOS - Backport #43996: mimic: Ceph tools utilizing "global_[pre_]init" no longer process "early" environment optionsRejectedNathan CutlerActions
Copied to RADOS - Backport #43997: nautilus: Ceph tools utilizing "global_[pre_]init" no longer process "early" environment optionsResolvedNathan CutlerActions
Actions #1

Updated by Jason Dillaman over 4 years ago

  • Backport set to nautilus,mimic
Actions #2

Updated by Jason Dillaman over 4 years ago

  • Description updated (diff)
Actions #3

Updated by Jason Dillaman over 4 years ago

  • Status changed from New to Fix Under Review
  • Assignee set to Jason Dillaman
  • Pull request ID set to 32830
Actions #4

Updated by Jason Dillaman over 4 years ago

  • Source set to Community (user)
Actions #5

Updated by Sage Weil about 4 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #6

Updated by Nathan Cutler about 4 years ago

  • Copied to Backport #43996: mimic: Ceph tools utilizing "global_[pre_]init" no longer process "early" environment options added
Actions #7

Updated by Nathan Cutler about 4 years ago

  • Copied to Backport #43997: nautilus: Ceph tools utilizing "global_[pre_]init" no longer process "early" environment options added
Actions #8

Updated by Jason Dillaman about 4 years ago

There will be a second fix for this issue since CLI optionals are no longer overriding the environment.

Actions #10

Updated by Nathan Cutler over 3 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF