global: ensure command-line arguments override CEPH_ARGS arguments

For example, if you have "CEPH_ARGS='--id XYZ'", passing "--id ABC" to
a Ceph CLI tool should result in the ABC id being utilized.

Fixes: https://tracker.ceph.com/issues/43795`
Signed-off-by: Jason Dillaman <dillaman@redhat.com>